--- a/src/app/first-form/first-form.component.html
+++ b/src/app/first-form/first-form.component.html
@@ -4,7 +4,11 @@
   </mat-card-header>
 <mat-card-content>
 
-  Replace this content with your First form.
+<form [formGroup]="firstForm">
+    <mat-form-field>
+  <input matInput [formControlName]="firstname" placeholder="First Name"/>
+  </mat-form-field>
+</form>
 
 </mat-card-content>
 
