tickets component added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-first-form> </app-first-form>
 <app-second-form></app-second-form>
 <app-third-form></app-third-form>
+<app-tickets></app-tickets>
