modified form practice

--- a/src/app/third-form/third-form.component.html
+++ b/src/app/third-form/third-form.component.html
@@ -1,11 +1,15 @@
-<mat-card>
-    <mat-card-header>
-      <h3>This is the Third form</h3>
-    </mat-card-header>
-  <mat-card-content>
+<mat-table [datasource]="datasource">
   
-    Replace this content with your Third form.
-  
-  </mat-card-content>
-  
-  </mat-card>
+  <ng-container matColumnDef="position">
+    <mat-header-cell *matHeaderCellDef mat-sort-header> No </mat-header-cell>
+    <mat-cell *matCellDef="let element">{{element.No}}</mat-cell>
+  </ng-container>
+
+  <ng-container matColumnDef="name">
+    <mat-header-cell *matHeaderDef mat-sort-header> Name </mat-header-cell>
+    <mat-cell *matcellDef="let element">{{element.Name}}</mat-cell>
+  </ng-container>
+
+  <mat-header-row *matHeaderRowDef="displayedcolumns"></mat-header-row>
+  <mat-row *matRowDef ="letrow; columns: displayedcolumns"></mat-row>
+</mat-table>
