--- a/src/app/third-form/third-form.component.html
+++ b/src/app/third-form/third-form.component.html
@@ -1,10 +1,10 @@
 
 <mat-card fxFlex="90%">
-  
+<mat-card-title>
+  <h3>USERS TABLE</h3>
+</mat-card-title>  
 
 <mat-table [dataSource]="datasource" class="mat-elevation-z8">
-
-<mat-table [dataSource]="datasource">
 
   
   <ng-container matColumnDef="position">
